src/objects/Fon_Membership_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Fon_Activation_Date__c</fullName>
        <description>Will be the date the membership is approved.</description>
        <label>Activation Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fon_Chapter_Join_Date__c</fullName>
        <description>Date to indicate when Member Joined their chapter.</description>
        <label>Chapter Join Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fon_Dues_Paid_by_Chapter__c</fullName>
        <description>This field is used in the generation of the Sales Order for Membership – the number should be the percent discount to be applied to the total membership charge. 

This field is also used to update the Contact object, which is then used in the solution for requirement BR 541 / AD-1553  (See Design Doc 2)</description>
        <label>Dues Paid by Chapter</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fon_Dues_Paid_by_Residency_Program__c</fullName>
        <description>This field is used in the generation of the Sales Order for Membership  – the number should be the percent discount to be applied to the total membership charge. 

This field is also used to update the Contact object, which is then used in the solution for requirement BR 538 / AD-1552 (See Design Doc 2)</description>
        <label>Dues Paid by Residency Program</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fon_Dues_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used if Staff waived Membership dues for this membership.
10/24/18 MSO Question + 11/16/18 Ftva answer:  This is a manual field in support of BR 545/ AD-1557 for reporting purposes. Dues waived would also be indicated by the Price Override on the Sales Order. This field can be deleted if AAFP won’t want to quickly refer to it.</description>
        <label>Dues Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fon_Extended_Training_Date__c</fullName>
        <description>Needed to calculate New Physician Status
 Used by BR 180/AD-187 and BR 571/AD-1582</description>
        <label>Extended Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fon_Foundation_Contribution_Information__c</fullName>
        <description>This field will be used to capture the numeric value of contributes made to the foundation when a member signs up.
Used by AD-1526</description>
        <label>Foundation Contribution Information</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fon_Join_Date__c</fullName>
        <label>Join Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fon_Life_Approved_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be used to indicate if member qualifies for Life membership.</description>
        <label>Life Approved Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fon_Medical_School_Graduation_Date__c</fullName>
        <description>Used by BR 179/AD-186 (See Design Doc 2)</description>
        <label>Medical School Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fon_Membership_Activation_Date__c</fullName>
        <description>For this specific membership
Set by system if pushed from AAFP
Set by staff if manually creating a new membership in the backend</description>
        <label>Membership Activation Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fon_Membership_Local__c</fullName>
        <label>Membership Local</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Fon_Membership_State_Chapter__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Kansas City</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fon_Membership_State_Chapter__c</fullName>
        <description>This Picklist will include all valid Membership types in the system.
May be set by AAFP push code, or manually by a staff member in the backend.</description>
        <label>Membership State/Chapter</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Virginia</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fon_Membership_Type__c</fullName>
        <description>This Picklist will include all valid Membership types in the system. Examples of Types would be Resident, Student, Life, etc.</description>
        <label>Membership Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Resident</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fon_Other_Price_Override__c</fullName>
        <description>Used by Staff to specify how much should be charged for this membership, if not the standard amount. Staff can enter “0” if nothing should be charged for this new Membership.</description>
        <label>Other Price Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fon_PAC_Contribution_Information__c</fullName>
        <description>This field will be used to capture the numeric value of contributes made to the PAC when a member signs up.
Used by AD-1527</description>
        <label>PAC Contribution Information</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fon_Residency_Program_Graduation_Date__c</fullName>
        <label>Residency Program Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fon_Residency_Training_Status__c</fullName>
        <description>Used during Resident to Active upgrade process</description>
        <label>Residency Training Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fon_Staging_Status__c</fullName>
        <label>Staging Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fon_Subscription_Plan__c</fullName>
        <label>Subscription Plan</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Fon_Membership_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1/1 – 12/31, single paymt</fullName>
                </value>
                <value>
                    <fullName>1/1 – 12/31, single paymt + autorenew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Membership Staging</label>
    <nameField>
        <label>Membership Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Membership Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>